feat: add css for seacrh section

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
             <img src="images/logo/Reservia@3x.png" alt="Logo Reservia" />
             <nav>
                 <ul>
-                    <li><a href="#">Hébergements</a></li>
-                    <li><a href="#">Activités</a></li>
+                    <li><a href="#accomodationSection">Hébergements</a></li>
+                    <li><a href="#activitySection">Activités</a></li>
                     <li><a href="#">S'inscrire</a></li>
                 </ul>
             </nav>
         </header>
 
-        <section>
+        <section id="searchSection">
             <h1>Trouver votre hébergement pour des vacances de rêve</h1>
             <p>En plein centre ville ou en pleine nature</p>
 
@@ -46,7 +46,7 @@
             
         </section>
 
-        <section>
+        <section id="accomodationSection">
             <article>
                 <h1>Hébergements à Marseille</h1>
                 <ul>
@@ -135,7 +135,7 @@
             </aside>
         </section>
 
-        <section>
+        <section id="activitySection">
             <h1>Activités à Marseille</h1>
             <div id="activity">
                 <div id="col_1">
