fix: add font-weight bold

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="#accomodationSection">Hébergements</a></li>
                     <li><a href="#activitySection">Activités</a></li>
-                    <li><a href="#">S'inscrire</a></li>
+                    <li><a href="#"><span class="blue">S'inscrire</span></a></li>
                 </ul>
             </nav>
         </header>
