feat:add css to activities section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </nav>
         </header>
 
-        <section id="searchSection">
+        <section class="searchSection">
             <h1>Trouver votre hébergement pour des vacances de rêve</h1>
             <p>En plein centre ville ou en pleine nature</p>
 
@@ -29,7 +29,7 @@
                     <button>Rechercher</button>
             </form>
 
-            <div id="filters">
+            <div class="filters">
                 <p>Filtres</p>
                 <ul>
                     <li><a href="#"><i class="fas fa-money-bill-wave"></i>Economique</a></li>
@@ -39,7 +39,7 @@
                 </ul>
             </div>
 
-            <div id="avalaible">
+            <div class="avalaible">
                 <i class="fas fa-info"></i>
                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
@@ -49,7 +49,7 @@
         <section id="accomodationSection">
             <article>
                 <h1>Hébergements à Marseille</h1>
-                <div id="roomsArticle">
+                <div class="roomsArticle">
                     <a href="#">
                         <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge la cannebiere" />
                         <h2>Auberge la Cannebière</h2>
@@ -93,7 +93,7 @@
             <aside>
                 <h1>Les plus populaires</h1>
                 <i class="fas fa-chart-line"></i>
-                <div id="roomsAside">
+                <div class="roomsAside">
                     <a href="#">
                         <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hotel le soleil du matin" />
                         <div class="descriptionAside">
@@ -122,48 +122,52 @@
             </aside>
         </section>
 
-        <section id="activitySection">
+        <section id="activitiesSection">
             <h1>Activités à Marseille</h1>
-            <div id="activity">
-                <div id="col_1">
+            <div class="activities">
+                <div class="col_1">
                     <a href="#">
-                        <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port"/>
-                        <h2>Vieux Port</h2>
+                        <div class="vieux_port">
+                            <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port" />
+                            <h2>Vieux Port</h2>
+                        </div>
                     </a>
                 </div>
-                <div id="col_2">
-                    <div id="fort_pomegues">
-                        <a href="#">
-                            <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort de pomegues"/>
+                <div class="col_2">
+                    <a href="#">
+                        <div class="pomegues">
+                            <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort de pomegues" />
                             <h2>Fort de Pomègues</h2>
-                        </a>
-                    </div>
-                    <div id="iles_frioul">
-                        <a href="#">
-                            <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="iles du frioul"/>
-                            <h2>Îles du Frioul</h2>
-                        </a>
-                    </div>
-                </div>
-                <div id="col_3">
-                    <a href="#">
-                        <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parc national des calanques"/>
-                        <h2>Parc National des Calanques</h2>
+                        </div>
                     </a>
+                    <a href="#">
+                        <div class="frioul">
+                            <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="iles du frioul" />
+                            <h2>Îles du Frioul</h2>
+                        </div> 
+                    </a> 
                 </div>
-                <div id="col_4">
-                    <div id="dame_garde">
+                <div class="col_3">
+                    <div class="calanques">
                         <a href="#">
-                            <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notre dame de la garde"/>
+                            <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parc national des calanques" />
+                            <h2>Parc National des Calanques</h2>
+                        </a>
+                    </div>
+                </div>
+                <div class="col_4">
+                    <div class="dame_garde">
+                        <a href="#">
+                            <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notre dame de la garde" />
                             <h2>Notre-Dame-de-la-Garde</h2>
                         </a>
                     </div>
-                    <div id="parc_longchamp">
+                    <div class="longchamp">
                         <a href="#">
-                            <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parc longchamp"/>
+                            <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parc longchamp" />
                             <h2>Parc Longchamp</h2>
                         </a>
-                    </div>
+                    </div>  
                 </div>
             </div>
         </section>
