--- a/index.html
+++ b/index.html
@@ -52,42 +52,57 @@
                 <div class="roomsArticle">
                     <a href="#">
                         <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge la cannebiere" />
-                        <h2>Auberge la Cannebière</h2>
-                        <p>Nuit à partir de 25€</p>
-                        <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i>
+                        <div class="descriptionArticle">
+                            <h2>Auberge la Cannebière</h2>
+                            <p>Nuit à partir de <span class="bold">25€</span></p>
+                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i>
+                        </div>  
                     </a>
                     <a href="#">
                         <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hotel du port" />
-                        <h2>Hôtel du port</h2>
-                        <p>Nuit à partir de 52€</p>
-                        <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
+                        <div class="descriptionArticle">
+                            <h2>Hôtel du port</h2>
+                            <p>Nuit à partir de 52€</p>
+                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
+                        </div> 
                     </a>
                     <a href="#">
                         <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hotel les mouettes" />
-                        <h2>Hôtel Les mouettes</h2>
-                        <p>Nuit à partir de 76€</p>
-                        <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i>
+                        <div class="descriptionArticle">
+                            <h2>Hôtel Les mouettes</h2>
+                            <p>Nuit à partir de 76€</p>
+                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i>
+                        </div>                       
                     </a>
                     <a href="#">
                         <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hotel de la mer" />
-                        <h2>Hôtel de la mer</h2>
-                        <p>Nuit à partir de 46€</p>
-                        <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                        <div class="descriptionArticle">
+                            <h2>Hôtel de la mer</h2>
+                            <p>Nuit à partir de 46€</p>
+                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                        </div>  
                     </a>
                     <a href="#">
                         <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="auberge le panier" />
-                        <h2>Auberge Le Panier</h2>
-                        <p>Nuit à partir de 23€</p>
-                        <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i>
+                        <div class="descriptionArticle">
+                            <h2>Auberge Le Panier</h2>
+                            <p>Nuit à partir de <span class="bold">23€</span></p>
+                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i>
+                        </div>                        
                     </a>
                     <a href="#">
                         <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotel chez amina" />
-                        <h2>Hôtel chez Amina</h2>
-                        <p>Nuit à partir de 96€</p>
-                        <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
+                        <div class="descriptionArticle">
+                            <h2>Hôtel chez Amina</h2>
+                            <p>Nuit à partir de 96€</p>
+                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
+                        </div>
                     </a>
                 </div>
-                <p>Afficher plus</p>
+                <div class="displayMore">
+                    <a href="#">Afficher plus</a>
+                </div>
+                
             </article>
 
             <aside>
@@ -99,7 +114,9 @@
                         <div class="descriptionAside">
                             <h2>Hôtel Le soleil du matin</h2>
                             <p>Nuit à partir de 128€</p>
-                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
+                            <div class="starsAside">
+                                <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
+                            </div>
                         </div>
                     </a>
                     <a href="#">
@@ -107,7 +124,9 @@
                         <div class="descriptionAside">
                             <h2>Au coeur de l'eau Chambres d'hôtes</h2>
                             <p>Nuit à partir de 71€</p>
-                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i>
+                            <div class="starsAside">
+                                <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i>
+                            </div>
                         </div>  
                     </a>
                     <a href="#">
@@ -115,7 +134,9 @@
                         <div class="descriptionAside">
                             <h2>Hôtel Tout bleu et blanc</h2>
                             <p>Nuit à partir de 68€</p>
-                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i>
+                            <div class="starsAside">
+                                <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i>
+                            </div>
                         </div>   
                     </a>
                 </div>
@@ -173,19 +194,19 @@
         </section>
 
         <footer>
-            <div id="a_propos">
-                <h1>A propos</h1>
+            <div class="a_propos">
+                <h2>A propos</h2>
                 <p>Fonctionnement du site</p>
                 <p>Conditions générales de vente</p>
                 <p>Données et confidentialité</p>
             </div>
-            <div id="accommodation">
-                <h1>Nos Hébergements</h1>
+            <div class="accommodation">
+                <h2>Nos Hébergements</h2>
                 <p>Charte qualité</p>
                 <p>Soumettre votre hôtel</p>
             </div>
-            <div id="assistance">
-                <h1>Assistance</h1>
+            <div class="assistance">
+                <h2>Assistance</h2>
                 <p>Centre d'aide</p>
                 <p>Nous contacter</p>
             </div>
