--- a/index.html
+++ b/index.html
@@ -196,19 +196,25 @@
         <footer>
             <div class="a_propos">
                 <h2>A propos</h2>
-                <p>Fonctionnement du site</p>
-                <p>Conditions générales de vente</p>
-                <p>Données et confidentialité</p>
+                <ul>
+                    <li><a href="#">Fonctionnement du site</a></li>
+                    <li><a href="#">Conditions générales de vente</a></li>
+                    <li><a href="#">Données et confidentialité</a></li>
+                </ul>
             </div>
             <div class="accommodation">
                 <h2>Nos Hébergements</h2>
-                <p>Charte qualité</p>
-                <p>Soumettre votre hôtel</p>
+                <ul>
+                    <li><a href="#">Charte qualité</a></li>
+                    <li><a href="#">Soumettre votre hôtel</a></li>
+                </ul>   
             </div>
             <div class="assistance">
                 <h2>Assistance</h2>
-                <p>Centre d'aide</p>
-                <p>Nous contacter</p>
+                <ul>
+                    <li><a href="#">Centre d'aide</a></li>
+                    <li><a href="#">Nous contacter</a></li>
+                </ul>
             </div>
         </footer>
 
