fix(header): delete list and add a border top to the links

--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
         <header>
             <img src="images/logo/Reservia@3x.png" alt="Logo Reservia" />
             <nav>
-                <ul>
-                    <li><a href="#accomodationSection">Hébergements</a></li>
-                    <li><a href="#activitySection">Activités</a></li>
-                    <li><a href="#"><span class="blue">S'inscrire</span></a></li>
-                </ul>
+                <a href="#accomodationSection">Hébergements</a>
+                <a href="#activitySection">Activités</a>
+                <a href="#"><span class="blue">S'inscrire</span></a>
             </nav>
         </header>
 
