fix(head): add new files css

--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="style.css" />
-        <link rel="stylesheet" href="css/fontawesome.css" />
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/header.css" />
+        <link rel="stylesheet" href="css/searchSection.css" />
+        <link rel="stylesheet" href="css/accomodationSection.css" />
+        <link rel="stylesheet" href="css/activitiesSection.css" />
+        <link rel="stylesheet" href="css/footer.css" />
+        <link rel="stylesheet" href="fontawesome/fontawesome.css" />
         <script src="https://kit.fontawesome.com/45e38e596f.js" crossorigin="anonymous"></script>
         <title>Reservia</title>
     </head>
