fix(accomodationSearch): add font-weight to €

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hotel du port" />
                         <div class="descriptionArticle">
                             <h2>Hôtel du port</h2>
-                            <p>Nuit à partir de 52€</p>
+                            <p>Nuit à partir de 52<span class="bold">€</span></p>
                             <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
                         </div> 
                     </a>
@@ -73,7 +73,7 @@
                         <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hotel les mouettes" />
                         <div class="descriptionArticle">
                             <h2>Hôtel Les mouettes</h2>
-                            <p>Nuit à partir de 76€</p>
+                            <p>Nuit à partir de 76<span class="bold">€</span></p>
                             <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i>
                         </div>                       
                     </a>
@@ -81,7 +81,7 @@
                         <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hotel de la mer" />
                         <div class="descriptionArticle">
                             <h2>Hôtel de la mer</h2>
-                            <p>Nuit à partir de 46€</p>
+                            <p>Nuit à partir de 46<span class="bold">€</span></p>
                             <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                         </div>  
                     </a>
@@ -97,7 +97,7 @@
                         <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotel chez amina" />
                         <div class="descriptionArticle">
                             <h2>Hôtel chez Amina</h2>
-                            <p>Nuit à partir de 96€</p>
+                            <p>Nuit à partir de 96<span class="bold">€</span></p>
                             <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
                         </div>
                     </a>
