fix(searchSection): add span to the button in the form

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <form>
                     <i class="fas fa-map-marker-alt"></i>
                     <input type="search" name="search">
-                    <button>Rechercher</button>
+                    <button><span class="searchButton">Rechercher</span><i class="fas fa-search"></i></button>
             </form>
 
             <div class="filters">
