--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             
         </section>
 
-        <section id="accomodationSection">
+        <section id="accommodationSection">
             <article>
                 <h1>Hébergements à Marseille</h1>
                 <div class="roomsArticle">
