fix(index): correction id name accommodationSection

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/header.css" />
         <link rel="stylesheet" href="css/searchSection.css" />
-        <link rel="stylesheet" href="css/accomodationSection.css" />
+        <link rel="stylesheet" href="css/accommodationSection.css" />
         <link rel="stylesheet" href="css/activitiesSection.css" />
         <link rel="stylesheet" href="css/footer.css" />
         <link rel="stylesheet" href="fontawesome/fontawesome.css" />
@@ -16,7 +16,7 @@
         <header>
             <img src="images/logo/Reservia@3x.png" alt="Logo Reservia" />
             <nav>
-                <a href="#accomodationSection">Hébergements</a>
+                <a href="#accommodationSection">Hébergements</a>
                 <a href="#activitySection">Activités</a>
                 <a href="#"><span class="blue">S'inscrire</span></a>
             </nav>
