fix(index): add link activitiesSection to header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="images/logo/Reservia@3x.png" alt="Logo Reservia" />
             <nav>
                 <a href="#accommodationSection">Hébergements</a>
-                <a href="#activitySection">Activités</a>
+                <a href="#activitiesSection">Activités</a>
                 <a href="#"><span class="blue">S'inscrire</span></a>
             </nav>
         </header>
