fix(accommodationSection): add div .starsArticle to the article

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
                         <div class="descriptionArticle">
                             <h2>Auberge la Cannebière</h2>
                             <p>Nuit à partir de <span class="bold">25€</span></p>
-                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i>
+                            <div class="starsArticle">
+                                <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i>
+                            </div>
                         </div>  
                     </a>
                     <a href="#">
@@ -66,7 +68,9 @@
                         <div class="descriptionArticle">
                             <h2>Hôtel du port</h2>
                             <p>Nuit à partir de 52<span class="bold">€</span></p>
-                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
+                            <div class="starsArticle">
+                                <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
+                            </div>
                         </div> 
                     </a>
                     <a href="#">
@@ -74,7 +78,9 @@
                         <div class="descriptionArticle">
                             <h2>Hôtel Les mouettes</h2>
                             <p>Nuit à partir de 76<span class="bold">€</span></p>
-                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i>
+                            <div class="starsArticle">
+                                <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i>
+                            </div>
                         </div>                       
                     </a>
                     <a href="#">
@@ -82,7 +88,9 @@
                         <div class="descriptionArticle">
                             <h2>Hôtel de la mer</h2>
                             <p>Nuit à partir de 46<span class="bold">€</span></p>
-                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                            <div class="starsArticle">
+                                <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                            </div>
                         </div>  
                     </a>
                     <a href="#">
@@ -90,7 +98,9 @@
                         <div class="descriptionArticle">
                             <h2>Auberge Le Panier</h2>
                             <p>Nuit à partir de <span class="bold">23€</span></p>
-                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i>
+                            <div class="starsArticle">
+                                <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star"></i>
+                            </div>
                         </div>                        
                     </a>
                     <a href="#">
@@ -98,7 +108,9 @@
                         <div class="descriptionArticle">
                             <h2>Hôtel chez Amina</h2>
                             <p>Nuit à partir de 96<span class="bold">€</span></p>
-                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
+                            <div class="starsArticle"> 
+                                <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
+                            </div>
                         </div>
                     </a>
                 </div>
