fix(footer): change the footer with CSS Grid

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
             <nav>
                 <a href="#accommodationSection">Hébergements</a>
                 <a href="#activitiesSection">Activités</a>
-                <a href="#"><span class="blue">S'inscrire</span></a>
             </nav>
+            <div class="signup">
+                <a href="#"><span class="blue">S'inscrire</span></a>
+            </div>
+            
         </header>
 
         <section class="searchSection">
