--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
                 <form>
                         <i class="fas fa-map-marker-alt"></i>
-                        <input type="search" name="search">
+                        <input type="search" name="search" value="Marseille, France">
                         <button><span class="searchButton">Rechercher</span><i class="fas fa-search"></i></button>
                 </form>
     
