fix(searchSection): update texts to .filters

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                 <div class="filters">
                     <p>Filtres</p>
                     <ul>
-                        <li><a href="#"><i class="fas fa-money-bill-wave"></i>Economique</a></li>
+                        <li><a href="#"><i class="fas fa-money-bill-wave"></i>Économique</a></li>
                         <li><a href="#"><i class="fas fa-child"></i>Familial</a></li>
                         <li><a href="#"><i class="fas fa-heart"></i>Romantique</a></li>
-                        <li><a href="#"><i class="fas fa-dog"></i>Animaux Autorisés</a></li>
+                        <li><a href="#"><i class="fas fa-dog"></i>Animaux autorisés</a></li>
                     </ul>
                 </div>
     
